# AYCF-Flight-Finder

./: .gitignore  README.md  captcha.py  configuration.yaml  logging_utils.py  main.py  parallel_jobs.py  pyproject.toml  requirements.txt  settings.py  test.py  test_iterative_calls.py  tox.ini  utils.py  webapp.py
.streamlit/: config.toml
data/: airport_database.yaml  airport_database_iata.yaml  airport_iata_icao_filtered.csv  airport_name_special_cases.yaml  airport_name_to_iata.yaml  city_country_map.yaml  map_iata_to_german_name.yaml  possible_flights.yaml
media/: process_model.drawio
services/: __init__.py  data_manager.py  emailer.py  flight_connection_parser.py  flight_connector_parser.py  flight_finder.py  logger_service.py  logging_statistics.py  parallel_scraper.py  reporter.py  rest_scraper.py  scraper.py  wizzair_flight_connector_parser.py
tests/: test_flight_finder.py  test_reporter.py
tests/resources/: checked_flights.yaml
tests/resources/direct/: available_flights.yaml  configuration.yaml  possible_flights.yaml
tests/resources/onestop/: available_flights.yaml  configuration.yaml  possible_flights.yaml
tests/resources/roundtrip/: available_flights.yaml  configuration.yaml  possible_flights.yaml
